
2020-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added download with curl (new variable CURL_FLAGS),
	  use this first, if it fails then fall back to wget

2020-05-05  Simon Sobisch <simonsobisch@gnu.org>

	* report.pl: use HiRes::Time if available, otherwise use the plain
	  time (resolution: seconds) to create duration.txt - no use of the
	  system's time command any more

2020-05-04  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: use of SED (configure-generated) instead of sed

2020-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (unpack-Z): improved portability

2019-12-10  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: allow to override URL_NEWCOB_Z and URL_NEWCOB_TAR_GZ
	* Makefile.am: improved portability to non-gmake - passing absolute name
	  for NEWCOB_VAL from either build or srcdir, removing the need to copy
	  newcob.val from srcdir (only the archives are copied from there)

2019-06-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added some additional output to show current status
	* Makefile.am (summary.log): now always rebuild (.PHONY)
	* Makefile.am (diff): ensure that results of all modules are compared
	  (now only fails early if there's an actual error during diff)
	* Makefile.am: moved dependency on summary.log from diff to diff-summary
	* report.pl: create additional file in each module directory: duration.txt
	  showing the duration in fractional seconds for each test (system time!)
	* Makefile.am (duration.log): new target collecting rough durations

2019-06-10  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am ($(MODULES)): missing dependency Makefile.module.in added,
	* Makefile.am (EXEC85.cob): delete in case of issues during sed ensuring
	  to not end with a partial source
	* Makefile.module.in (clean, clean-db): targets added
	* report.pl: only delete files in DB_HOME if it does not equal to "."

2019-05-25  Simon Sobisch <simonsobisch@gnu.org>
