@@ -1,7 +1,7 @@
 #
 # Makefile gnucobol/tests/cobol85/##MODULE##
 #
-# Copyright (C) 2003-2012, 2015-2019 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2015-2020 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -23,6 +23,7 @@ TESTS = ##TESTS##
 TESTS_LOCAL = ##TESTS_LOCAL##
 
 RM = rm -rf
+DIFF_FLAGS = ##DIFF_FLAGS##
 
 # targets that are only logical targets instead of files
 .PHONY: test test-local diff test-O test-O-local lib lib-local $\
@@ -46,7 +47,7 @@ test-local:
 diff: report.txt
 	@echo
 	@echo "Comparing test results for module directory ##MODULE##"
-	diff ##COB85DIR##/##MODULE##.txt report.txt || true
+	@diff $(DIFF_FLAGS) ##COB85DIR##/##MODULE##.txt report.txt || true
 
 test-O:
 	@. ../../atconfig && . ../../atlocal NIST-##MODULE##-O_$@ && $(MAKE) $@-local
