@@ -1,4 +1,9 @@
 
+2020-07-10  Simon Sobisch <simonsobisch@gnu.org>
+
+	* Makefile.am, Makefile.module.in: pass DIFF_FLAGS down,
+	  fixes different Win32 builds
+
 2020-06-12  Simon Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: added download with curl (new variable CURL_FLAGS),
